<resources>
    <string name="app_name">Note Book</string>
    <string name="search_bar">Search</string>
    <string name="title">Note Title</string>
    <string name="content">Type note here...</string>
    <string name="color">Color</string>
    <string name="image">Add image</string>
    <string name="link">Add URL</string>
    <string name="enter_link">Enter URL</string>
    <string name="add">Add</string>
    <string name="delete_note">Delete note</string>
    <string name="delete_message">Confirm to delete this note permanently.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>