<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CreateNoteActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/_40sdp"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/_10sdp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            app:layout_constraintBottom_toBottomOf="@+id/txtTitle"
            app:layout_constraintTop_toBottomOf="@+id/txtTitle">

            <ImageView
                android:id="@+id/imgBack"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginStart="@dimen/_6sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_6sdp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/grey_26" />

            <ImageView
                android:id="@+id/imgSave"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/_4sdp"
                android:src="@drawable/ic_done"
                app:layout_constraintBottom_toBottomOf="@+id/imgBack"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/imgBack"
                app:tint="@color/grey_26" />

            <EditText
                android:id="@+id/txtTitle"
                android:layout_width="0dp"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:background="@null"
                android:hint="@string/title"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="text"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgBack" />

            <TextView
                android:id="@+id/txtDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:includeFontPadding="false"
                android:textSize="@dimen/_10sdp"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="@+id/txtTitle"
                app:layout_constraintStart_toStartOf="@+id/txtTitle"
                app:layout_constraintTop_toBottomOf="@+id/txtTitle" />

            <ImageView
                android:id="@+id/imgPicture"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_12sdp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/txtDate"/>

            <ImageView
                android:id="@+id/imgRemovePicture"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/_4sdp"
                android:src="@drawable/ic_delete"
                android:visibility="gone"
                app:tint="@color/red"
                app:layout_constraintTop_toTopOf="@id/imgPicture"
                app:layout_constraintEnd_toEndOf="@id/imgPicture"/>

            <LinearLayout
                android:id="@+id/URLlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/imgPicture"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:id="@+id/URL"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autoLink="web"
                    android:textStyle="italic"
                    android:includeFontPadding="false"
                    android:textSize="@dimen/_13sdp"/>
                
                <ImageView
                    android:id="@+id/imgRemoveURL"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_cancel"
                    app:tint="@color/red"/>

            </LinearLayout>

            <EditText
                android:id="@+id/txtContent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                android:background="@null"
                android:gravity="top"
                android:hint="@string/content"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="textMultiLine"
                android:minHeight="@dimen/_70sdp"
                android:textSize="@dimen/_13sdp"
                android:textStyle="normal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/URLlayout" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <include layout="@layout/layout_menu" />
    <!--    <LinearLayout-->
    <!--        android:id="@+id/menuLayout"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:background="@drawable/bg_menu"-->
    <!--        android:layout_gravity="bottom"-->
    <!--        android:paddingTop="@dimen/_15sdp"-->
    <!--        android:paddingBottom="@dimen/_15sdp">-->

    <!--        <ImageView-->
    <!--            android:id="@+id/imgExtensions"-->
    <!--            android:layout_width="@dimen/_23sdp"-->
    <!--            android:layout_height="@dimen/_23sdp"-->
    <!--            android:layout_marginStart="@dimen/_6sdp"-->
    <!--            android:src="@drawable/ic_add_box"-->
    <!--            app:tint="@color/white" />-->

    <!--        <ImageView-->
    <!--            android:id="@+id/imgColor"-->
    <!--            android:layout_width="@dimen/_23sdp"-->
    <!--            android:layout_height="@dimen/_23sdp"-->
    <!--            android:layout_marginStart="@dimen/_15sdp"-->
    <!--            android:src="@drawable/ic_color_lens"-->
    <!--            app:tint="@color/white" />-->
    <!--    </LinearLayout>-->
</androidx.coordinatorlayout.widget.CoordinatorLayout>